# LETI-OOP

./: CMakeLists.txt  README.md  application.cpp  application.hpp  complex.cpp  complex.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  number.hpp  polynomial.cpp  polynomial.hpp
